fix: overflow on long group names, nodebb/nodebb#7447

--- a/less/topic.less
+++ b/less/topic.less
@@ -96,13 +96,6 @@
 		.status {
 			vertical-align: 0%;
 		}
-
-		.group-label {
-			text-transform: uppercase;
-			vertical-align: 5%;
-			padding: 4px;
-			border-radius: 2px;
-		}
 	}
 
 	.bookmarked {
